--- a/athletic_sales_analysis.ipynb
+++ b/athletic_sales_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +287,7 @@
        "[1297 rows x 12 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -551,7 +551,7 @@
        "[8346 rows x 12 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -570,69 +570,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "retailer             object\n",
-       "retailer_id           int64\n",
-       "invoice_date         object\n",
-       "region               object\n",
-       "state                object\n",
-       "city                 object\n",
-       "product              object\n",
-       "price_per_unit        int64\n",
-       "units_sold            int64\n",
-       "total_sales           int64\n",
-       "operating_profit    float64\n",
-       "sales_method         object\n",
-       "dtype: object"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1297 entries, 0 to 1296\n",
+      "Data columns (total 12 columns):\n",
+      " #   Column            Non-Null Count  Dtype  \n",
+      "---  ------            --------------  -----  \n",
+      " 0   retailer          1297 non-null   object \n",
+      " 1   retailer_id       1297 non-null   int64  \n",
+      " 2   invoice_date      1297 non-null   object \n",
+      " 3   region            1297 non-null   object \n",
+      " 4   state             1297 non-null   object \n",
+      " 5   city              1297 non-null   object \n",
+      " 6   product           1297 non-null   object \n",
+      " 7   price_per_unit    1297 non-null   int64  \n",
+      " 8   units_sold        1297 non-null   int64  \n",
+      " 9   total_sales       1297 non-null   int64  \n",
+      " 10  operating_profit  1297 non-null   float64\n",
+      " 11  sales_method      1297 non-null   object \n",
+      "dtypes: float64(1), int64(4), object(7)\n",
+      "memory usage: 121.7+ KB\n"
+     ]
     }
    ],
    "source": [
     "# Check the 2020 sales data types.\n",
-    "sales_20_df.dtypes\n",
+    "sales_20_df.info()\n",
+    "#sales_20_df.dtypes\n",
     "#sales_20_df.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "retailer             object\n",
-       "retailer_id           int64\n",
-       "invoice_date         object\n",
-       "region               object\n",
-       "state                object\n",
-       "city                 object\n",
-       "product              object\n",
-       "price_per_unit        int64\n",
-       "units_sold            int64\n",
-       "total_sales           int64\n",
-       "operating_profit    float64\n",
-       "sales_method         object\n",
-       "dtype: object"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 8346 entries, 0 to 8345\n",
+      "Data columns (total 12 columns):\n",
+      " #   Column            Non-Null Count  Dtype  \n",
+      "---  ------            --------------  -----  \n",
+      " 0   retailer          8346 non-null   object \n",
+      " 1   retailer_id       8346 non-null   int64  \n",
+      " 2   invoice_date      8346 non-null   object \n",
+      " 3   region            8346 non-null   object \n",
+      " 4   state             8346 non-null   object \n",
+      " 5   city              8346 non-null   object \n",
+      " 6   product           8346 non-null   object \n",
+      " 7   price_per_unit    8346 non-null   int64  \n",
+      " 8   units_sold        8346 non-null   int64  \n",
+      " 9   total_sales       8346 non-null   int64  \n",
+      " 10  operating_profit  8346 non-null   float64\n",
+      " 11  sales_method      8346 non-null   object \n",
+      "dtypes: float64(1), int64(4), object(7)\n",
+      "memory usage: 782.6+ KB\n"
+     ]
     }
    ],
    "source": [
     "# Check the 2021 sales data types.\n",
-    "sales_21_df.dtypes\n",
+    "sales_21_df.info()\n",
+    "#sales_21_df.dtypes\n",
     "#sales_21_df.shape"
    ]
   },
@@ -645,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -897,7 +905,7 @@
        "[9643 rows x 12 columns]"
       ]
      },
-     "execution_count": 177,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -910,7 +918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -931,7 +939,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 178,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -943,7 +951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -979,14 +987,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Louis\\AppData\\Local\\Temp\\ipykernel_9004\\3456481224.py:3: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
+      "C:\\Users\\Louis\\AppData\\Local\\Temp\\ipykernel_20772\\3456481224.py:3: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
       "  converted_sales_20_21_df[\"invoice_date\"] = pd.to_datetime(converted_sales_20_21_df[\"invoice_date\"])\n"
      ]
     },
@@ -1239,7 +1247,7 @@
        "[9643 rows x 12 columns]"
       ]
      },
-     "execution_count": 180,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1253,35 +1261,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "retailer                    object\n",
-       "retailer_id                  int64\n",
-       "invoice_date        datetime64[ns]\n",
-       "region                      object\n",
-       "state                       object\n",
-       "city                        object\n",
-       "product                     object\n",
-       "price_per_unit               int64\n",
-       "units_sold                   int64\n",
-       "total_sales                  int64\n",
-       "operating_profit           float64\n",
-       "sales_method                object\n",
-       "dtype: object"
-      ]
-     },
-     "execution_count": 181,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 9643 entries, 0 to 9642\n",
+      "Data columns (total 12 columns):\n",
+      " #   Column            Non-Null Count  Dtype         \n",
+      "---  ------            --------------  -----         \n",
+      " 0   retailer          9643 non-null   object        \n",
+      " 1   retailer_id       9643 non-null   int64         \n",
+      " 2   invoice_date      9643 non-null   datetime64[ns]\n",
+      " 3   region            9643 non-null   object        \n",
+      " 4   state             9643 non-null   object        \n",
+      " 5   city              9643 non-null   object        \n",
+      " 6   product           9643 non-null   object        \n",
+      " 7   price_per_unit    9643 non-null   int64         \n",
+      " 8   units_sold        9643 non-null   int64         \n",
+      " 9   total_sales       9643 non-null   int64         \n",
+      " 10  operating_profit  9643 non-null   float64       \n",
+      " 11  sales_method      9643 non-null   object        \n",
+      "dtypes: datetime64[ns](1), float64(1), int64(4), object(6)\n",
+      "memory usage: 904.2+ KB\n"
+     ]
     }
    ],
    "source": [
     "# Confirm that the \"invoice_date\" data type has been changed.\n",
-    "converted_sales_20_21_df.dtypes\n"
+    "converted_sales_20_21_df.info()\n"
    ]
   },
   {
@@ -1300,7 +1311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
@@ -1378,7 +1389,7 @@
        "Southeast Florida    Miami                        73135"
       ]
      },
-     "execution_count": 182,
+     "execution_count": 112,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1403,7 +1414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -1451,7 +1462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -1529,7 +1540,7 @@
        "          Florida        Orlando           27682851"
       ]
      },
-     "execution_count": 184,
+     "execution_count": 114,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1554,7 +1565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -1602,7 +1613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -1689,7 +1700,7 @@
        "Foot Locker Southeast South Carolina Charleston        24822280"
       ]
      },
-     "execution_count": 186,
+     "execution_count": 116,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1714,7 +1725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -1756,7 +1767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
@@ -2008,7 +2019,7 @@
        "[1604 rows x 12 columns]"
       ]
      },
-     "execution_count": 188,
+     "execution_count": 118,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2028,7 +2039,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -2115,7 +2126,7 @@
        "Sports Direct South     Texas          Dallas                               8790"
       ]
      },
-     "execution_count": 189,
+     "execution_count": 119,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2140,7 +2151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
@@ -2180,7 +2191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
@@ -2219,7 +2230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
@@ -2258,7 +2269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
